k8s/cms-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: cms-service
  namespace: kube-system
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: cms-deployment
  type: NodePort
